# boids

./: .gitignore  README  boids.cl  build.py
include/: boid.hpp  common.hpp  constants.hpp  draw.hpp  vec.hpp
scripts/: CMakeLists.txt  FindOpenCL.cmake  FindSFML.cmake  build.py
src/: boid.cpp  draw.cpp  main.cpp  moveboid.cpp  vec.cpp
